--- a/covid.html
+++ b/covid.html
@@ -148,7 +148,7 @@
                                                         Decor</a></li>
                                                 <li><a href="lifestyle.html" target="_blank"
                                                         title="lifestyle">Lifestyle</a></li>
-                                                <li><a href="stationery.html" target="_blank">Stationery</a></li>
+                                                <li><a href="stationery.html" target="_blank" title="stationery">Stationery</a></li>
                                                 <li><a href="makeup.html" target="_blank" title="makeup">Makeup</a></li>
 
                                                 <li><a href="#contact" title="contact_us">Contact Us</a>
@@ -423,7 +423,24 @@
                     <div class="features_items">
                         <!--features_items-->
                         <h2 class="title text-center">Best Ratings</h2>
+                        <div class="row">
+                            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
 
+                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B087XC5RQZ&asins=B087XC5RQZ&linkId=04e1118a748776baff93cc055f0a264b&show_border=true&link_opens_in_new_window=true"></iframe>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B0867NG73L&asins=B0867NG73L&linkId=9c0a4a887d5f5cf3fee9e68a605c3a9f&show_border=true&link_opens_in_new_window=true"></iframe>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B086TDLPWS&asins=B086TDLPWS&linkId=343afdee3f4af1e3aab623bb9464084a&show_border=true&link_opens_in_new_window=true"></iframe>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B0886VVYZH&asins=B0886VVYZH&linkId=5d75691b2ed528cc8758dfb349b6a40b&show_border=true&link_opens_in_new_window=true"></iframe>
+                            </div>
+
+
+
+                        </div>
 
                         <div class="row">
                             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
